force-app/main/default/objects/Task_Type__c/Task_Type__c.object-meta.xml
<CustomObject>
    <label>Task Type</label>
    <nameField>
        <label>Task Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>