force-app/main/default/objects/Task_Type__c/fields/Billable_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable_Non_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable ?</label>
    <type>Checkbox</type>
</CustomField>