force-app/main/default/objects/Task_Type__c/fields/Billing_rate_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Billing_rate_per_hour__c</fullName>
    <label>Billing rate (per hour)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>