force-app/main/default/objects/Task_Type__c/fields/Task_Type_Project__c.field-meta.xml
<CustomField>
    <fullName>Task_Type_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Type Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Task Types</relationshipLabel>
    <relationshipName>Task_Types</relationshipName>
    <type>Lookup</type>
</CustomField>