force-app/main/default/objects/Task_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billable_Non_Billable__c</columns>
    <columns>Task_Type_Project__c</columns>
    <columns>Billing_rate_per_hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>